<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/single_person_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_rectangle"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:shape="ring"
            app:cardCornerRadius="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/pet1"
                android:scaleType="centerCrop"
                android:src="@drawable/pet1"
                tools:ignore="ImageContrastCheck" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/item_1"
            android:textColor="?attr/colorOnSurface"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/iv_gender"
            app:layout_constraintEnd_toStartOf="@id/iv_mark"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/cv_avatar"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_gender"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/gender"
            android:scaleType="centerCrop"
            android:src="@drawable/male_black_24dp"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@drawable/bg_rounded_gray_rectangle"
            android:paddingHorizontal="10dp"
            android:paddingVertical="7dp"
            android:text="@string/item_1"
            android:textColor="@color/black"
            android:textSize="21sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_age"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/iv_gender" />

        <ImageView
            android:id="@+id/iv_mark"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/mark"
            android:padding="0dp"
            android:src="@drawable/favorite_border_black_36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_1"
            android:textColor="?attr/colorOnSurface"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_ages"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_ages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ages"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>