<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.WorkDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_background_work_detail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/background"
            android:scaleType="centerCrop"
            android:src="@drawable/pet2"
            app:layout_constraintDimensionRatio="1:0.9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/ic_baseline_circle_24"
            android:contentDescription="@string/back"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_work_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="3dp"
            app:layout_constraintBottom_toBottomOf="@id/iv_background_work_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_background_work_detail">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <TextView
                    android:id="@+id/tv_work_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/iv_ic_about_work"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="30dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_pets_24"
            app:layout_constraintStart_toStartOf="@id/cv_work_info"
            app:layout_constraintTop_toBottomOf="@id/cv_work_info"
            app:tint="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/tv_about_work"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/about_work"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_ic_about_work"
            app:layout_constraintStart_toEndOf="@id/iv_ic_about_work"
            app:layout_constraintTop_toTopOf="@id/iv_ic_about_work" />

        <TextView
            android:id="@+id/tv_work_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/description"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="@id/cv_work_info"
            app:layout_constraintStart_toStartOf="@id/cv_work_info"
            app:layout_constraintTop_toBottomOf="@id/tv_about_work" />


        <View
            android:id="@+id/v_line_about"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="40dp"
            android:background="@color/gray_border"
            app:layout_constraintTop_toBottomOf="@id/tv_work_description" />

        <ImageView
            android:id="@+id/iv_ic_work_gallery"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="40dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_round_image_24"
            app:layout_constraintStart_toStartOf="@id/cv_work_info"
            app:layout_constraintTop_toBottomOf="@id/v_line_about"
            app:tint="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/tv_work_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/pet_gallery"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_ic_work_gallery"
            app:layout_constraintStart_toEndOf="@id/iv_ic_work_gallery"
            app:layout_constraintTop_toTopOf="@id/iv_ic_work_gallery" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_work_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/cv_work_info"
            app:layout_constraintTop_toBottomOf="@id/tv_work_gallery"
            app:spanCount="3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>